elk-openshift/elastic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: elastic
  labels:
    app: elastic
  namespace: dev-jupyter-data-science
spec:
  serviceAccountName: elk-svc-acc
  containers:
    - env:
        - name: LS_JAVA_OPTS
          value: "-Xmx1024m -Xms1024m"
        - name: network.host
          value: "0.0.0.0"
        - name: http.port
          value: "9200"
        - name: bootstrap.memory_lock
          value: "true"
        - name: cluster.name
          value: "elk-cluster"
        - name: xpack.security.enabled
          value: "false"
        - name: discovery.type
          value: "single-node"
        - name: path.data
          value: "/elastic-pv/data"
      name: elastic
      image: "prasadgugulla/elastic:7.16.2"
      ports:
        - containerPort: 9200
      volumeMounts:
        - name: elastic-pv
          mountPath: /elastic-pv
  volumes:
    - name: elastic-pv
      persistentVolumeClaim:
        claimName: elastic-pvc
