elk-openshift/logstash-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: dev-jupyter-data-science
spec:
  selector:
    matchLabels:
      app: logstash
  replicas: 1
  template:
    metadata:
      labels:
        app: logstash
    spec:
      serviceAccountName: elk-svc-acc
      containers:
        - name: logstash
          image: docker.io/elastic/logstash:7.16.2

          ports:
            - containerPort: 9600
          volumeMounts:
            - name: notebooks-pv
              mountPath: /notebooks-pv
      volumes:
        - name: notebooks-pv
          persistentVolumeClaim:
            claimName: notebooks-pvc
