elk-openshift/logstash.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logstash
  labels:
    app: logstash
  namespace: dev-jupyter-data-science
spec:
  serviceAccountName: elk-svc-acc
  containers:
    - env:
        - name: LS_JAVA_OPTS
          value: "-Xmx256m -Xms256m"
      name: logstash
      image: "prasadgugulla/logstash:7.10.0"
      command: ["logstash -f ./logstash.conf"]
      ports:
        - containerPort: 9600
      volumeMounts:
        - name: notebooks-pv
          mountPath: /notebooks-pv
  volumes:
    - name: notebooks-pv
      persistentVolumeClaim:
        claimName: notebooks-pvc
