elk-openshift/elastic-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: elastic
  namespace: dev-jupyter-data-science
spec:
  selector:
    app: elastic
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
