elk-openshift/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: dev-jupyter-data-science
spec:
  selector:
    app: kibana
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
