elk-openshift/logstash-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: dev-jupyter-data-science
spec:
  selector:
    app: kibana
  ports:
    - protocol: TCP
      port: 9600
      targetPort: 9600
