elk-openshift/elastic-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: elastic-route
  namespace: dev-jupyter-data-science
  labels:
    app.kubernetes.io/instance: elastic-route
spec:
  host: >-
    elastic.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
  to:
    kind: Service
    name: elastic
    weight: 100
  port:
    targetPort: 9200
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGEDCCBPigAwIBAgISAyOLtNZ1znIQvBGz+tQRT6ZQMA0GCSqGSIb3DQEBCwUA
[...]
      pZ1ZDFi6Bdf8/NjPhVwFLYW+spU=
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/      
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpQIBAAKCAQEA6USOUP9kQRXRyqUjmcJoOklVBmvzY/cL2Aa24luvDjRn6Wr2
[...]
      W+3DGaKa6RUL7hq7l6fXyJW+BmazeIDA7IoGYZHrmeEVCbYqZ//6iCs=
      -----END RSA PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: >-
         elastic.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
      routerName: default
      conditions:
        - type: Admitted
          status: "True"
      wildcardPolicy: None
      routerCanonicalHostname: >-
        router-default.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
